﻿﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-11 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php: bug #1322871, local file inclusion

2005-10-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * footer.inc.php, index.php, left.php, queryframe.php, querywindow.php
      server_databases.php, css/phpmyadmin.css.php, libraries/common.lib.php
      libraries/left_header.inc.php, libraries/sql_query_form.lib.php
      themes/darkblue_orange/css/theme_left.css.php
      themes/original/css/theme_left.css.php:
      XHTML 1.0 trans. compliance and more semantic XHTML output
    * tbl_printview.php, tbl_properties_structure.php:
      no table statistics for information_schema
    * tbl_properties_table_info.php:
      bug #1317655 information_schema browsing

2005-10-09 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_links.php: invalid js confirmation and operation feedback
      when dropping a view
    * server_privileges.php: bug #1226819, Accepting Negative values in
      Resource Limits in Privileges

2005-10-09 Michal Čihař  <michal@cihar.com>
    * libraries/display_export.lib.php, libraries/export/sql.php, lang/*,
      config.default.php: Add ability to limit maximal size of extended insert
      query, defaults to 50 KB (RFE #1015378).
    * import.php, libraries/common.lib.php, lang/*: Show message when
      bookmark has been created (RFE #477472), show deleted bookmark query.
    * server_privileges.php: Limit username and hostname to actual limits of
      MySQL (RFE #1178071).
    * config.default.php: Add COMPRESS and UNCOMPRESS functions.
    * tbl_change.php: Show functions for blobs when upload is enabled (RFE
      #1191792).
    * tbl_properties.inc.php: Remove unused code, show only available engines,
      remember value of seleted engine (bug #1239580).
    * browse_foreigners.php, libraries/get_foreign.lib.php: Support for